# arc_puzzle_generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: parameters.txt  position_rule_mapping.txt  rule_listing.csv
src/abm/: action.py  agent.py  color_sequence_iterator.py  data_loader.py  direction.py  geometry.py  model.py  neighbourhood.py  physics.py  selection.py  selectors.py  simulation.py  state.py  transition.py
src/arc_puzzle_generator/: action.py  agent.py  collisions.py  color_iterator.py  data_loader.py  direction.py  entities.py  generators.py  geometry.py  grid_utils.py  model.py  neighbourhood.py  physics.py  playground.py  puzzle_generator.py  (+5 more)
tests/: test_agent.py  test_collisions.py  test_color_iterator.py  test_color_sequence_iterator.py  test_data_loader.py  test_entities.py  test_generator.py  test_geometry.py  test_grid.py  test_model.py  test_neighbourhood.py  test_physics.py  test_playground.py  test_point.py  test_puzzle_eight.py  test_puzzle_eighteen.py  test_puzzle_eightynine.py  test_puzzle_eightysix.py  test_puzzle_fiftyfive.py  test_puzzle_four.py  test_puzzle_fourteen.py  test_puzzle_fourtyfour.py  test_puzzle_hundredfive.py  test_puzzle_hundredtwelve.py  test_puzzle_ninety.py  test_puzzle_ninetyeight.py  test_puzzle_ninetytwo.py  test_puzzle_one.py  test_puzzle_seventyfour.py  test_puzzle_sixtyfour.py  test_puzzle_sixtyseven.py  test_puzzle_ten.py  test_puzzle_thirty.py  test_puzzle_thirtynine.py  test_puzzle_twentyfive.py  test_puzzle_twentyseven.py  test_puzzle_two.py  test_rule.py  test_selection.py  test_selectors.py  (+1 more)
(+53 files in other folders)
